# glskeleton2

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  report.md
.claude/: settings.local.json
ext/: CMakeLists.txt
include/glskeleton/: shader.h  utils.h
resources/shaders/: basic.vert
scripts/: setup.ps1  setup.sh
src/: main.cpp
